[metadata]
name = glint_pygui
version = 1.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SydneyAstrophotonicInstrumentationLab/glint_pygui
author = Marc-Antoine Martinod
author_email = mam.astro01@gmail.com
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires =
    pyqt5
    numpy
    matplotlib
    scipy
    pyqtgraph
    astropy

python_requires = >=3.8.5